--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
 
     <header>       
         <div class="header_left">
-            <button id="clear_all_button"><i class="fa-solid fa-trash-can"></i></button>
+            <i class="fa-solid fa-trash-can clear_all_button"></i>
         </div>
         <div id="logo">TO DO LIST</div>
         <div class="header_rigth">
-            <button id="search_button"><i class="fa-solid fa-magnifying-glass"></i></button>
+            <!-- <div id="search_object">
+                <input type="search" placeholder="Buscar a la llista" id="input_search" value="" />
+                <button id="buttonSearch" class="button_search"><i class="fa-solid fa-magnifying-glass"></i></button>
+            </div> -->
         </div>
     </header>
     
@@ -25,8 +28,8 @@
         <input type="search" placeholder="Buscar a la llista" id="input_search" value="" />
         <button id="buttonSearch" class="button_search"><i class="fa-solid fa-magnifying-glass"></i></button>
     </div>
-
-    <ul id="list_object">  
+    
+    <ul id="list_object"> 
     </ul>
 
     <footer>
