--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <footer>
         <div id="input_object">
-            <input type="text" placeholder="Què vols fer?" id="input_task" value="" />
+            <input type="text" placeholder="Què vols fer?" id="input_task" tabindex="1" value="" />
             <div id="buttons_inside_input">
                <button id="buton_add" class="button_addTask"><i class="fa-solid fa-circle-plus"></i></button>
             </div>
