neteja classes CSS

--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
         </div>
     </header>
     
+    <!-- SEARCH OBJECT FA PETAR L'ESTRUCTURA EN EN RESPONSIVE NO SÉ PER QUIN MOTIU! -->
     <div id="search_object">
         <input type="search" placeholder="Buscar a la llista" id="input_search" value="" />
         <button id="buttonSearch" class="button_search"><i class="fa-solid fa-magnifying-glass"></i></button>
     </div>
-    
+    <!-- SEARCH OBJECT FA PETAR L'ESTRUCTURA EN EN RESPONSIVE NO SÉ PER QUIN MOTIU! -->
+
     <ul id="list_object"> 
     </ul>
 
